--- a/TripCourseReservation.csproj
+++ b/TripCourseReservation.csproj
@@ -99,10 +99,20 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CourseCreateWindow.xaml.cs">
+      <DependentUpon>CourseCreateWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Course.cs" />
     <Compile Include="Entities\Term.cs" />
     <Compile Include="Entities\Trip.cs" />
     <Compile Include="RepoCreation.cs" />
+    <Compile Include="TripCreateWindow.xaml.cs">
+      <DependentUpon>TripCreateWindow.xaml</DependentUpon>
+    </Compile>
+    <Page Include="CourseCreateWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -115,6 +125,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="TripCreateWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
