Course CRUD methods have been implemented.

--- a/App.config
+++ b/App.config
@@ -7,7 +7,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="reservations" connectionString="Data Source=C:\Temp\TripCourseReservation_Data\Data.xml" providerName="System.Xml.XmlDocument" />
+    <add name="courses" connectionString="Data Source=C:\Temp\TripCourseReservation_Data\Courses.xml" providerName="System.Xml.XmlDocument" />
+    <add name="trips" connectionString="Data Source=C:\Temp\TripCourseReservation_Data\Trips.xml" providerName="System.Xml.XmlDocument" />
   </connectionStrings>
   <log4net>
     <root>
