--- a/packages.config
+++ b/packages.config
@@ -1,8 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="2.0.2" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.12.0" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.16.0" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights.Log4NetAppender" version="2.16.0" targetFramework="net472" />
+  <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net472" />
+  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="net472" />
+  <package id="Prism.Core" version="8.0.0.1909" targetFramework="net472" />
+  <package id="Prism.Wpf" version="8.0.0.1909" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="5.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
