--- a/TripCourseReservation.csproj
+++ b/TripCourseReservation.csproj
@@ -174,6 +174,7 @@
       <DependentUpon>MainWindowAnother.xaml</DependentUpon>
     </Compile>
     <Compile Include="Shared\CoursesXSDValidation.cs" />
+    <Compile Include="Shared\ProjectExtensions.cs" />
     <Compile Include="Shared\TripDataValidation.cs" />
     <Compile Include="Shared\ObservableObject.cs" />
     <Compile Include="UpdateCourseWindow.xaml.cs">
